# prompt_learning

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  SUMMARY.md  beginner_python_insight.md  benchmarks.md  creative_writer_insight.md  example.py  hello.py  initial_base_architecture.md  main.py  pyproject.toml  requirements.txt  setup.py  test_benchmark_system.py
comprehensive_benchmark_results/results/reports/: results_report.html
examples/: __init__.py  benchmarking_demo.py  complete_memento_demo.py  comprehensive_benchmark_demo.py  dataset_demo.py  enhanced_components_showcase.py  enhanced_learner_demo.py  integrated_benchmark_demo.py  logger.py  problems.py  quick_demo.py  real_dataset_demo.py  run_problems.py  standard_benchmarking_demo.py  standard_datasets_demo.py  system_prompts.py  visualization_demo.py
feedback_loop/: collector.py
logs/: combined_results_20250514_165658.json  run_info_ai_researcher_20250514_164355.json  run_info_beginner_python_20250514_162455.json  run_info_creative_writer_20250514_162926.json  run_info_data_scientist_20250514_163149.json  run_info_devops_engineer_20250514_165658.json  run_info_embedded_systems_20250514_164433.json  run_info_ethical_hacker_20250514_164255.json  run_info_expert_python_20250514_162556.json  run_info_game_developer_20250514_163236.json  run_info_mathematician_20250514_162752.json  run_info_mobile_developer_20250514_165504.json  run_info_music_composer_20250514_162713.json  run_info_security_expert_20250514_163044.json  run_info_system_architect_20250514_163002.json  run_info_web_developer_20250514_165410.json
memento/: __init__.py  exceptions.py
memento/benchmarking/: __init__.py  comprehensive_benchmark.py  main.py
memento/benchmarking/baselines/: __init__.py  auto_evolve.py  promptbreeder.py  self_evolving_gpt.py
memento/benchmarking/datasets/: __init__.py  dataset_loaders.py  loader.py
memento/benchmarking/evaluation/: __init__.py  benchmark_runner.py  evaluator.py  metrics.py  model_evaluator.py  statistical_analyzer.py  task_metrics.py
memento/benchmarking/visualization/: __init__.py  comparison_plotter.py  results_visualizer.py  visualizer.py
memento/benchmarking/visualization/templates/: report.html
memento/cli/: __init__.py  __main__.py  benchmark.py  comprehensive_benchmark.py  main.py
memento/config/: __init__.py  models.py  settings.py
memento/core/: __init__.py  base.py  collector.py  learner.py  processor.py
memento/core/metrics/: base.py  collectors.py  types.py
memento/datasets/: __init__.py  creative_writing.py  dataset_manager.py  evaluation_suite.py  mathematics.py  software_engineering.py  standard_datasets.py
memento/utils/: __init__.py  helpers.py  logger.py  metrics.py  validation.py  validators.py
memento/visualization/: base.py  comparison.py  dashboard.py  results.py  statistical.py
memento/visualization/templates/: comparison_report.html  results_report.html
paper/src/: main.tex  references.bib
prompt_evolution/: learner.py
prompt_integration/: processor.py
tests/: test_benchmark_system.py  test_enhanced_collector.py  test_enhanced_learner.py  test_enhanced_processor.py  test_feedback_loop.py  test_integration.py  test_prompt_integration.py
tests/benchmarking/: test_comprehensive_benchmark.py  test_loader.py  test_runner.py  test_task_metrics.py
tests/visualization/: test_dashboard.py  test_statistical.py
