[project]
name = "propmt-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.21.0",
    "ollama>=0.1.0",
    "pandas>=1.3.0",
    "pytest>=7.0.0",
    "python-dotenv>=0.19.0",
    "scikit-learn>=0.24.0",
    "tqdm>=4.62.0",
]
